installed newest stable version of next.js, added styling to globals.css for scrollbar on webkit-based browsers, added brain.jsx and removed bugs in svg, changed styles of experience text so it doesn't collapse on other experience items, chaged color styles of experience section, added Brain component to page.jsx and styled it as well

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* For WebKit-based browsers (Chrome, Safari, etc.) */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.258);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.417);
+}
